# lazyeat

./: .gitignore  README.md  README_EN.md  index.html  main.spec  main_win.spec  package.json  requirements.txt  vite.config.ts
neu/: .gitignore  neutralino.config.json  package.json
neu/frontend/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
neu/frontend/src/: App.vue  backend_api.ts  main.ts
neu/frontend/src/view/: Home.vue
py_src/: HandTrackingModule.py  MyDetector.py  VoiceController.py  main.py
src/: App.vue  main.ts  py_api.ts
src-py/: DrawInScreen.py  GestureSender.py  HandTrackingModule.py  Joystick.py  MyDetector copy.py  MyDetector.py  VoiceController.py  main.py  pinia_store.py  state_machine.py  tem_test.py  test.py  win32test.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs
src/components/: AutoStart.vue  Menu.vue
src/store/: app.ts
src/view/: Home.vue
tauri/: package.json
tauri/src/: App.vue  backend_api.ts  main.ts
tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauri/src/view/: Home.vue
